[package]
name = "pistonPath"
version = "1.0.0"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]

[[bin]]
name = "path"
path = "path.rs"

[dependencies]
piston_window = "0.80"
piston2d-opengl_graphics = "0.53"
rand = "0.5"
vecmath = "0.3"
num = "0.1.27"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
