[package]
name = "pistonPath"
version = "1.0.0"
description = "A simple pathfinding demo with Piston"
readme = "README.md"
repository = "https://gitlab.com/torbmol/space_tennis"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"

[[bin]]
name = "path"
path = "path.rs"

[dependencies]
piston_window = "0.80"
piston2d-opengl_graphics = "0.53"
font-loader = "0.7"
rand = "0.5"
vecmath = "0.3"
num = "0.1.27"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
