[package]
name = "pistonPath"
version = "1.0.0"
description = "A simple pathfinding demo with Piston"
readme = "README.md"
repository = "https://gitlab.com/torbmol/space_tennis"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "GPL-3.0-or-later"

[[bin]]
name = "path"
path = "path.rs"

[dependencies]
piston_window = "0.123"
piston2d-opengl_graphics = "0.81"
font-loader = "0.11"
rand = "0.6.3"
vecmath = "1.0"
num = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
